--- a/flink-shaded-zookeeper-parent/pom.xml
+++ b/flink-shaded-zookeeper-parent/pom.xml
@@ -37,6 +37,7 @@ under the License.
         <module>flink-shaded-zookeeper-36</module>
         <module>flink-shaded-zookeeper-37</module>
         <module>flink-shaded-zookeeper-38</module>
+        <module>flink-shaded-zookeeper-39</module>
     </modules>
 
     <properties>
